--- a/package.json
+++ b/package.json
@@ -6,28 +6,40 @@
     "postinstall": "umi generate tmp",
     "prettier": "prettier --write '**/*.{js,jsx,tsx,ts,less,md,json}'",
     "test": "umi-test",
-    "test:coverage": "umi-test --coverage"
-  },
-  "gitHooks": {
-    "pre-commit": "lint-staged"
+    "test:coverage": "umi-test --coverage",
+    "changelog": "conventional-changelog -p angular -i ./CHANGELOG.md -s -r 0"
   },
   "lint-staged": {
-    "*.{js,jsx,less,md,json}": [
-      "prettier --write"
+    "*.{js,jsx,md,json}": [
+      "prettier --write",
+      "eslint --fix"
+    ],
+    "*.less": [
+      "prettier --write",
+      "stylelint --fix"
     ],
     "*.ts?(x)": [
       "prettier --parser=typescript --write"
     ]
   },
   "dependencies": {
-    "@ant-design/pro-layout": "^5.0.12",
+    "@ant-design/mobile": "^3.0.0-alpha.7",
     "@umijs/preset-react": "1.x",
-    "@umijs/test": "^3.2.27",
-    "lint-staged": "^10.0.7",
-    "prettier": "^1.19.1",
+    "@umijs/test": "^3.2.24",
+    "await-to-js": "^2.1.1",
+    "lodash": "^4.17.20",
+    "postcss-plugin-px2rem": "^0.8.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
-    "umi": "^3.2.27",
-    "yorkie": "^2.0.0"
+    "umi": "^3.2.24"
+  },
+  "devDependencies": {
+    "@commitlint/cli": "^11.0.0",
+    "@commitlint/config-conventional": "^11.0.0",
+    "@umijs/fabric": "^2.3.1",
+    "conventional-changelog-cli": "^2.1.0",
+    "husky": "^4.3.0",
+    "lint-staged": "^10.4.2",
+    "prettier": "^2.1.2"
   }
 }
