--- a/package.json
+++ b/package.json
@@ -23,23 +23,23 @@
     ]
   },
   "dependencies": {
-    "@ant-design/mobile": "^3.0.0-alpha.7",
-    "@umijs/preset-react": "1.x",
-    "@umijs/test": "^3.2.24",
+    "@ant-design/mobile": "3.0.0-alpha.8",
+    "@umijs/preset-react": "1.7.13",
+    "@umijs/test": "^3.3.7",
     "await-to-js": "^2.1.1",
     "lodash": "^4.17.20",
     "postcss-plugin-px2rem": "^0.8.1",
-    "react": "^16.12.0",
-    "react-dom": "^16.12.0",
-    "umi": "^3.2.24"
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
+    "umi": "^3.3.7"
   },
   "devDependencies": {
     "@commitlint/cli": "^11.0.0",
     "@commitlint/config-conventional": "^11.0.0",
-    "@umijs/fabric": "^2.3.1",
+    "@umijs/fabric": "^2.5.6",
     "conventional-changelog-cli": "^2.1.0",
-    "husky": "^4.3.0",
-    "lint-staged": "^10.4.2",
-    "prettier": "^2.1.2"
+    "husky": "^4.3.8",
+    "lint-staged": "^10.5.3",
+    "prettier": "^2.2.1"
   }
 }
