--- a/package.json
+++ b/package.json
@@ -31,7 +31,9 @@
     "postcss-plugin-px2rem": "^0.8.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
-    "umi": "^3.3.7"
+    "react-h5-calendar": "^1.0.5",
+    "umi": "^3.3.7",
+    "umi-hd": "^5.0.1"
   },
   "devDependencies": {
     "@commitlint/cli": "^11.0.0",
