--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "prettier": "prettier --write '**/*.{js,jsx,tsx,ts,less,md,json}'",
     "test": "umi-test",
     "test:coverage": "umi-test --coverage",
-    "changelog": "conventional-changelog -p angular -i ./CHANGELOG.md -s -r 0"
+    "analyze": "ANALYZE=1 umi build",
+    "changelog": "conventional-changelog -p angular -i ./CHANGELOG.md -s -r 0",
+    "prepare": "husky install"
   },
   "lint-staged": {
     "*.{js,jsx,md,json}": [
@@ -36,6 +38,7 @@
     "@umijs/preset-react": "1.8.2",
     "@umijs/test": "^3.4.3",
     "await-to-js": "^3.0.0",
+    "classnames": "^2.2.6",
     "lodash": "^4.17.21",
     "postcss-plugin-px2rem": "^0.8.1",
     "react": "^17.0.1",
