--- a/package.json
+++ b/package.json
@@ -34,27 +34,27 @@
     "umi-h5-template"
   ],
   "dependencies": {
-    "@ant-design/mobile": "3.0.0-alpha.8",
-    "@umijs/preset-react": "1.8.2",
-    "@umijs/test": "^3.4.3",
+    "@umijs/preset-react": "1.8.21",
+    "@umijs/test": "^3.5.14",
+    "antd-mobile": "5.0.0-alpha.2",
     "await-to-js": "^3.0.0",
-    "classnames": "^2.2.6",
+    "classnames": "^2.3.1",
     "lodash": "^4.17.21",
     "postcss-plugin-px2rem": "^0.8.1",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "react-h5-calendar": "^1.0.6",
-    "umi": "^3.4.3",
+    "umi": "^3.5.14",
     "umi-hd": "^5.0.1",
     "webpack-version-file-plugin": "^0.4.0"
   },
   "devDependencies": {
-    "@commitlint/cli": "^12.0.1",
-    "@commitlint/config-conventional": "^12.0.1",
-    "@umijs/fabric": "^2.5.7",
+    "@commitlint/cli": "^13.1.0",
+    "@commitlint/config-conventional": "^13.1.0",
+    "@umijs/fabric": "^2.6.2",
     "conventional-changelog-cli": "^2.1.0",
-    "husky": "^5.1.3",
-    "lint-staged": "^10.5.4",
-    "prettier": "^2.2.1"
+    "husky": "^7.0.1",
+    "lint-staged": "^11.1.1",
+    "prettier": "^2.3.2"
   }
 }
